--- a/WebContent/bootstrap.css
+++ b/WebContent/bootstrap.css
@@ -2385,7 +2385,7 @@ textarea.form-control {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: transparent;
+  background-color: rgba(227, 179, 255, 0.938);
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
