--- a/WebContent/bootstrap.css
+++ b/WebContent/bootstrap.css
@@ -2378,7 +2378,7 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: white;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -2420,15 +2420,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
+  color: white;
   background-color: rgba(38, 143, 255, 0.5);
   border-color: rgba(38, 143, 255, 0.8);
 }
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
+  color: white;
+  background-color: rgba(38, 143, 255, 1);
+  border-color: rgba(38, 143, 255, 0.8);
 }
 
 .btn-primary:focus, .btn-primary.focus {
