--- a/WebContent/css/demo.css
+++ b/WebContent/css/demo.css
@@ -3,7 +3,7 @@
 /* General Demo Style */
 body{
 	font-family: Cambria, Georgia, serif;
-	background: #f9f9f9 url(../images/bg.jpg);
+	background: #f9f9f9 url(../defaultImg/matchs/bg.jpg);
 	font-weight: 300;
 	font-size: 15px;
 	color: #333;
